Update standalone.conf.bat